[gd_scene load_steps=9 format=2]

[ext_resource path="res://MenuBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://RecordPack.gd" type="Script" id=2]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://MetaPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://AboutWindow.tscn" type="PackedScene" id=6]
[ext_resource path="res://SaveDialog.tscn" type="PackedScene" id=7]
[ext_resource path="res://ErrorHandler.tscn" type="PackedScene" id=8]
[ext_resource path="res://ErrorHandler.gd" type="Script" id=9]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.05176e-05
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuPanel" parent="." instance=ExtResource( 1 )]

[node name="SwapperPanel" type="Panel" parent="."]
anchor_left = 0.9
anchor_right = 1.0
anchor_bottom = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Swapper" type="Button" parent="SwapperPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Meta"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPanel" type="Panel" parent="."]
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecordScroll" type="ScrollContainer" parent="MainPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecordGrid" type="GridContainer" parent="MainPanel/RecordScroll"]
margin_right = 640.0
margin_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetaPanel" parent="." instance=ExtResource( 5 )]

[node name="AboutWindow" parent="." instance=ExtResource( 6 )]

[node name="SaveDialog" parent="." instance=ExtResource( 7 )]
margin_left = 107.0
margin_top = 152.0
margin_right = -316.0
margin_bottom = -249.0

[node name="ErrorHandler" parent="." instance=ExtResource( 8 )]
script = ExtResource( 9 )

[node name="RecordPack" type="Node" parent="."]
script = ExtResource( 2 )
[connection signal="pressed" from="SwapperPanel/Swapper" to="." method="_on_Swapper_pressed"]
[connection signal="error" from="RecordPack" to="ErrorHandler" method="_on_RecordPack_error"]
